...
            "state": "translated",
            "value": "Autoriser le mode paysage"
          }
        }
      }
    },
    "Appearance": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Appearance"
...
            "value": "外観"
          }
        },
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Darstellung"
          }
        },
        "fr": {
          "stringUnit": {
            "state": "translated",
            "value": "Apparence"
...
            "state": "translated",
            "value": "Si vous avez déjà acheté Unlock sur un autre appareil, restaurez-le ici."
          }
        }
      }
    },
    "Interface": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Interface"
...
            "value": "インターフェース"
          }
        },
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Oberfläche"
          }
        },
        "fr": {
          "stringUnit": {
            "state": "translated",
            "value": "Interface"
...
            "state": "translated",
            "value": "Envoyez des données de plantage et de diagnostic pour aider à corriger les bugs."
          }
        }
      }
    },
    "Settings": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
...
            "value": "設定"
          }
        },
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Einstellungen"
          }
        },
        "fr": {
          "stringUnit": {
            "state": "translated",
            "value": "Réglages"
...
