...
            } label: {
                VStack(alignment: .leading) {
                    Text("Language")
                    SettingsCaption(text: "Choose the language for the app.")
                }
            }
            .accessibilityIdentifier("languagePicker")
            #if os(iOS) || os(macOS)
                .onChange(of: appLanguage) { _, _ in
                    viewModel.showPreferenceChanged()
                }
            #endif
            #if os(iOS)
...
